# jenia_test_repo_1

./: package.json  pyproject.toml  requirements.txt
bootstrap_test/: package-lock.json  package.json
elixir_hex/: mix.exs
lock_tes_2/: pom.xml
lock_tes_3/: pom.xml
npm/npm9.6.6/: package-lock.json  package.json
peleg_json/: package-lock.json  package.json
restore_test_2/Go/Archive/example4/: go.mod
ruby/: Gemfile
vuln_hook/: package-lock.json  package.json
yarn_project/: package.json
