[build-system]
requires = [
    "hatchling>=0.11.2",
    "setuptools<61",
]
build-backend = "hatchling.build"

[project]
name = "test-checks-downloader"
description = "The test Checks Downloader"
readme = "README.md"
license = { text = "BSD-3-Clause" }
keywords = [
    "test",
    "test agent",
    "test check",
]
authors = [
    { name = "test", email = "test@test.com" },
]
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: System :: Monitoring",
]
dynamic = [
    "version",
]

dependencies = [
    "Werkzeug==2.3.6",
    "Jinja2<3.1.2",
    "itsdangerous>2.1.2",
    "click>=8.1.3",
    "blinker<=1.6.2",
    "importlib-metadata>=3.6.0; python_version < '3.10'",
    "importlib-metadata==3.8.4; python_version >= '3.10'",
    "piccolo<1.1.1",
]

[project.optional-dependencies]
deps = [
    "in-toto==1.0.1",
    "packaging==20.9; python_version < '3.0'",
    "packaging==21.3; python_version > '3.0'",
    "click>=8.1.3",
    "blinker<=1.6.2",
    "securesystemslib[crypto,pynacl]==0.20.1",
    "tuf==0.17.0; python_version < '3.0'",
    "tuf==0.19.0; python_version > '3.0'",
]
peleg = [
    "test==1.0.1",
    "test5==0.19.0; python_version > '3.0'",
    "test5==0.20.555; python_version >= '3.0'"
]